Moved Decred related crypto functions into trezor-crypto

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -19,7 +19,6 @@ OBJS += signing.o
 OBJS += crypto.o
 OBJS += ethereum.o
 OBJS += ethereum_tokens.o
-OBJS += decred.o
 
 OBJS += debug.o
 
@@ -48,6 +47,8 @@ OBJS += ../vendor/trezor-crypto/aes/aes_modes.o
 
 OBJS += ../vendor/trezor-qrenc/qr_encode.o
 
+OBJS += ../vendor/trezor-crypto/decred.o
+
 # OBJS += protob/pb_common.o
 OBJS += protob/pb_decode.o
 OBJS += protob/pb_encode.o
@@ -65,29 +66,3 @@ CFLAGS += -DDEBUG_LOG=0
 CFLAGS += -DSCM_REVISION='"$(shell git rev-parse HEAD | sed 's:\(..\):\\x\1:g')"'
 CFLAGS += -DUSE_ETHEREUM=1
 CFLAGS += -DUSE_DECRED=1
-
-DECRED_TEST_OBJS = decred.o
-DECRED_TEST_OBJS += coins.o
-DECRED_TEST_OBJS += ../vendor/trezor-crypto/address.o
-DECRED_TEST_OBJS += ../vendor/trezor-crypto/base58.o
-DECRED_TEST_OBJS += ../vendor/trezor-crypto/bignum.o
-DECRED_TEST_OBJS += ../vendor/trezor-crypto/bip32.o
-DECRED_TEST_OBJS += ../vendor/trezor-crypto/bip39.o
-DECRED_TEST_OBJS += ../vendor/trezor-crypto/blake256.o
-DECRED_TEST_OBJS += ../vendor/trezor-crypto/curves.o
-DECRED_TEST_OBJS += ../vendor/trezor-crypto/ecdsa.o
-DECRED_TEST_OBJS += ../vendor/trezor-crypto/ed25519-donna/ed25519.o
-DECRED_TEST_OBJS += ../vendor/trezor-crypto/hmac.o
-DECRED_TEST_OBJS += ../vendor/trezor-crypto/nist256p1.o
-DECRED_TEST_OBJS += ../vendor/trezor-crypto/pbkdf2.o
-DECRED_TEST_OBJS += ../vendor/trezor-crypto/ripemd160.o
-DECRED_TEST_OBJS += ../vendor/trezor-crypto/secp256k1.o
-DECRED_TEST_OBJS += ../vendor/trezor-crypto/sha2.o
-DECRED_TEST_OBJS += ../vendor/trezor-crypto/sha3.o
-
-
-decred_testbed: decred_testbed.o $(DECRED_TEST_OBJS)
-	$(CC) -g -I../vendor/trezor-crypto decred_testbed.o $(DECRED_TEST_OBJS) -o decred_testbed
-
-decred_tests: decred_tests.o $(DECRED_TEST_OBJS)
-	$(CC) -g -I../vendor/trezor-crypto decred_tests.o  $(DECRED_TEST_OBJS) -lcheck -lsubunit -lrt -lpthread -lm   -o decred_tests
